Fixed onDrag useCallback dependency array; resizing the window doesnt break the gradient now. Added a generic component to change options on the demo and added a height cursor option

--- a/src/css/cursor.css
+++ b/src/css/cursor.css
@@ -6,7 +6,6 @@
 
 
 .dummy {
-    height: 110%;
     position: absolute;
 }
 
